--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -28,9 +28,9 @@
     <string name="pref_host_title">Adresse du serveur</string>
     <string name="pref_host_summary">Adresse racine du serveur distant</string>
     <string name="pref_mintime_title">Temps minimum</string>
-    <string name="pref_mintime_summary">Temps minimum entre les mises à jour de localisation</string>
+    <string name="pref_mintime_summary">Temps minimum entre chaque enregistrement de position</string>
     <string name="pref_mindistance_title">Distance minimum</string>
-    <string name="pref_mindistance_summary">Distance minimum entre les mises à jour de localisation</string>
+    <string name="pref_mindistance_summary">Distance minimum entre chaque enregistrement de position</string>
     <string name="pref_minaccuracy_title">Précision minimum</string>
     <string name="pref_minaccuracy_summary">Précision minimum de la position</string>
     <string name="pref_imagesize_title">Taille d\'image</string>
@@ -42,10 +42,10 @@
     <string name="pref_external_title">Autoriser les actions externes</string>
     <string name="pref_external_summary">Permet de recevoir des commandes d\'autres applications pour faciliter l\'automatisation et la planification des tâches.</string>
     <string name="pref_provider_title">Fournisseur de position</string>
-    <string name="pref_provider_summary">La localisation peut être fournie par le fournisseur GPS, le réseau ou les deux. Utiliser les deux fournisseurs donnera de meilleurs résultats mais utilisera plus de batterie.</string>
+    <string name="pref_provider_summary">Le positionnement peut être fourni par le GPS, le réseau ou les deux. Utiliser les deux fournisseurs donnera de meilleurs résultats mais utilisera plus de batterie.</string>
     <string name="pref_units_title">Unités</string>
-    <string name="pref_units_summary">Unités préférées pour afficher le résumé de la piste</string>
-    <string name="pref_units_metric">Mètre</string>
+    <string name="pref_units_summary">Unités préférées pour afficher le résumé de la trace</string>
+    <string name="pref_units_metric">Métrique</string>
     <string name="pref_units_imperial">Impérial</string>
     <string name="pref_units_nautical">Système nautique</string>
     <string name="pref_auto_name_title">Nom par défaut de la trace</string>
@@ -59,8 +59,8 @@
     <string name="nothing_to_synchronize">Rien à synchroniser</string>
     <string name="no_positions">La trace actuelle n\'a pas de position</string>
     <string name="warning">Attention</string>
-    <string name="notsync_warning">La piste actuelle contient des positions non synchronisées. Définir une nouvelle piste supprimera ces données.</string>
-    <string name="clear_warning">Êtes-vous sûr de vouloir supprimer la piste actuelle et toutes ses données de l\'appareil ? Aucune donnée sur le serveur ne sera supprimée.</string>
+    <string name="notsync_warning">La trace actuelle contient des positions non synchronisées. Définir une nouvelle trace supprimera ces données.</string>
+    <string name="clear_warning">Êtes-vous sûr de vouloir supprimer la trace actuelle et toutes ses données de l\'appareil ? Aucune donnée sur le serveur ne sera supprimée.</string>
     <string name="no_track_warning">Merci de d\'abord créer une nouvelle trace</string>
     <string name="empty_trackname_warning">Le nom de la trace ne peut pas être vide</string>
     <string name="logger_running_warning">Merci d\'arrêter l\'enregistrement actuel</string>
@@ -101,13 +101,13 @@
     <string name="nothing_to_export">Rien à exporter</string>
     <string name="export_done">Piste sauvegardée avec succès</string>
     <string name="export_failed">Échec de l\'export</string>
-    <string name="unknown_track">Piste inconnue</string>
+    <string name="unknown_track">Trace inconnue</string>
     <string name="export_started">Export débuté</string>
     <plurals name="label_positions_behind">
-        <item quantity="one">%d position derrière</item>
+        <item quantity="one">%d position en attente</item>
         <item quantity="other">%d positions en attente</item>
     </plurals>
-    <string name="track_server_setup_warning">Si vous modifiez la configuration du serveur, vous ne pourrez peut-être pas synchroniser la piste en cours.</string>
+    <string name="track_server_setup_warning">Si vous modifiez la configuration du serveur, vous ne pourrez peut-être pas synchroniser la trace en cours.</string>
     <string name="pref_mintime_other">Intervalle de temps minimum en secondes</string>
     <string name="pref_mindistance_other">Distance minimum en mètres</string>
     <string name="pref_minaccuracy_other">Précision minimum en mètres</string>
