Require background location permission for non-interactive usage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,6 @@
     <string name="clear">Clear track</string>
     <string name="share_link">Share track link</string>
     <string name="image_task_failed">Image resampling failed</string>
+    <string name="background_location_rationale">Background location permission is only needed when tracking is started without user interaction: through external command or when application is automatically started on system boot.\nFor this functionality to work you must select \"%s\" option in the location permission dialog.\nProceed to application permissions?</string>
+    <string name="background_location_required">Background location permission required</string>
 </resources>
